Add license information

--- a/index.html
+++ b/index.html
@@ -14,8 +14,10 @@
 		<div>
 			Instance list:
 			<ul id="instances">
-			</ul>
 		</div>
+		<footer>
+			<a href="/javascript.html" data-jslicense="1">JavaScript license information</a></ul>
+		</footer>
 	</body>
 	<script type="text/javascript" src="constants.js"></script>
 	<script type="text/javascript" src="script.js"></script>
