--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 			<ul id="instances">
 		</div>
 		<footer>
-			<a href="/javascript.html" data-jslicense="1">JavaScript license information</a></ul>
+			<a href="javascript.html" data-jslicense="1">JavaScript license information</a></ul>
 		</footer>
 	</body>
 	<script type="text/javascript" src="constants.js"></script>
