--- a/javascript.html
+++ b/javascript.html
@@ -8,9 +8,9 @@
 		<h1>JS license</h1>
 		<table id="jslicense-labels1">
 			<tr>
-				<td><a href="constant.js">constant.js</a></td>
+				<td><a href="constants.js">constants.js</a></td>
 				<td><a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU-GPL-3.0-or-later</a></td>
-				<td><a href="constant.js">constant.js</a></td>
+				<td><a href="constants.js">constants.js</a></td>
 			</tr>
 			<tr>
 				<td><a href="script.js">script.js</a></td>
