Make table more readable

--- a/javascript.html
+++ b/javascript.html
@@ -3,10 +3,32 @@
 	<head>
 		<meta content="text/html;charset=utf-8" http-equiv="Content-Type">
 		<meta content="utf-8" http-equiv="encoding">
+<style>
+table {
+	width: 60%;
+	margin: 0 auto;
+	text-align: center;
+	border-collapse: collapse;
+}
+table, th, td {
+	border: 1px solid black;
+}
+td, th {
+	padding: 0.5rem;
+}
+a {
+	text-decoration: none;
+}
+</style>
 	</head>
 	<body>
 		<h1>JS license</h1>
 		<table id="jslicense-labels1">
+			<tr>
+				<th>File</th>
+				<th>License</th>
+				<th>Source</th>
+			</tr>
 			<tr>
 				<td><a href="constants.js">constants.js</a></td>
 				<td><a href="http://www.gnu.org/licenses/gpl-3.0.html">GNU-GPL-3.0-or-later</a></td>
